--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
   <div class="md-flex md-justify-between">
     <h3 class="pt-3 pl-4">DeliciousMeatDish</h3>
-    <ul class="footer__navi flex">
-      <li>About</li>
-      <li>サイトマップ</li>
+    <ul class="footer__navi">
       <li>プライバシーポリシー</li>
+      <li>サイトマップ</li>
+      <li>よくあるご質問</li>
+      <li><%= link_to "About", about_path %></li>
     </ul>
   </div>
+  
   <hr />
   <p class="copyright text-center">
     © 2023 Example Inc. All Rights Reserved.
