--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2f4f4f;">
     <div class="container">
       <a class="navbar-brand" href="/">DeliciousMeatDish</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,11 +7,11 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-      
-      <div class="search-form mr-3 mt-1">
+          
+       <div class="search-form mr-3 mt-1">
         <%= render 'layouts/search'%>
       </div>
-      
+
         <% if user_signed_in? %>
 
           <li>
