--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="carousel-caption about-bg">
-      <h1 class="mt-5">About</h1>
+      <h1 class="about mt-5">About</h1>
       <h4 class="about-text mt-3">DeliciousMeatDishは肉料理に特化したレシピ投稿サイトです。</br>
       昨今菜食主義が増えている中、このサイトでは、</br>お肉料理を中心にレシピを投稿でき、レビューをすることもできます。 </br>
       肩身が狭くなってしまった肉好きさんのプラットフォームを作れたらと思いました。</h4>
