--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="row">
     <h2 class="mt-5 bg-light">レシピ一覧（全<%= @recipes.count %>件）</h2>
+    
+    <div class="col-5 mt-5">
+          <%= link_to '新しい順', recipes_path(latest: "true") %>
+    | <%= link_to '古い順', recipes_path(old: "true") %>
+    </div>
   </div>
 </div>
 
