--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <%= render 'layouts/flash' %>
   <div class="row">
-    <div class="col-3 my-5">
+    <div class="col-6 offset-4 mt-5">
       <h3>ユーザー一覧</h3>
     </div>
   </div>
   
   <div class="row">
-    <div class="col-9">
+    <div class="col-9 offset-1 mt-5">
       <table class="table text-center">
         <thead>
           <tr>
