--- a/app/views/public/recipes/edit.html.erb
+++ b/app/views/public/recipes/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-auto offset-2">
       <h1 class="bg-light mt-4 mb-3"><%= @recipe.name %>レシピ編集</h1>
     </div>
   </div>
