--- a/app/views/public/users/confirm.html.erb
+++ b/app/views/public/users/confirm.html.erb
@@ -2,8 +2,7 @@
   <div class="row text-center">
     <div class="mx-auto col-8 my-5">
       <h2>　本当に退会しますか？</h2>
-      <p class="my-4">退会すると、会員情報登録や</br>
-      これまでの購入履歴が閲覧できなくなります。</br>
+      <p class="my-4">退会すると、ユーザー情報登録が失われてしまいます。</br>
       退会する場合は「退会する」をクリックしてください。</p>
       
       <table class="table table-borderless">
