--- a/app/views/public/homes/_slide.html.erb
+++ b/app/views/public/homes/_slide.html.erb
@@ -1,19 +1,19 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner mt-5">
     <div class="carousel-item active" data-interval="2000">
-      <%= image_tag 'slide1.jpg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide1.jpg', size: "600x500", class: "d-block w-100" %>
     </div>
     
     <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide2.jpg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide2.jpg', size: "600x500", class: "d-block w-100" %>
     </div>
     
     <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide3.jpg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide3.jpg', size: "600x500", class: "d-block w-100" %>
     </div>
     
     <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide4.jpg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide4.jpg', size: "600x500", class: "d-block w-100" %>
     </div>
     
     <div class="carousel-caption top-bg">
@@ -21,10 +21,12 @@
     </div>
   </div>
   
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleInterval" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-target="#carouselExampleInterval" data-slide="next">
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  </button>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
