--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -11,6 +11,4 @@
 
 <%= render 'list', recipes: @recipes %>
 
-<div class="d-flex justify-content-center mt-3 custom-pagination">
-  <%= paginate @recipes %>
-</div>
+<%= render 'layouts/paginate', recipes: @recipes %>
