--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= render 'layouts/flash' %>
   <div class="row">
-    <h1 class="mt-3 my-3 bg-light"><%= @recipe.name %>レシピ詳細</h1>
+    <h1 class="mt-4 my-3 bg-light"><%= @recipe.name %>レシピ詳細</h1>
   </div>
 
   <div class="post-detail">
@@ -85,37 +85,41 @@
           <table class="table-borderless">
             <% if @recipe.user == current_user %>
               <tr>
-                <td></td>
-                <td><%= link_to "削除", recipe_path(@recipe), method: :delete, class:'btn btn-danger btn-sm' %></td>
-                <td></td>
-                <td><%= link_to "レシピ編集", edit_recipe_path(@recipe), class:'btn btn-success btn-sm' %></td>
-                <td></td>
+                <td width="200"></td>
+                <td width="300"><%= link_to "削除", recipe_path(@recipe), method: :delete, class:'btn btn-danger btn-sm' %></td>
+                <td width="200"></td>
+                <td width="100"><%= link_to "レシピ編集", edit_recipe_path(@recipe), class:'btn btn-success btn-sm' %></td>
               </tr>
             <% end %>
           </table>
           <hr>
-
+          
           <div class="comments card-text">
-            <h4 class="mt-4"><%= @recipe.recipe_comments.count %>件コメント</h4>
+            <h4 class="mt-4 mb-4"><%= @recipe.recipe_comments.count %>件コメント</h4>
 
             <% @recipe.recipe_comments.each do |recipe_comment| %>
               <div class="media border md-3">
                 <div class="media-body ml-4 p-3">
                     <%= recipe_comment.user.name %>
                     ｜<%= recipe_comment.comment %>
-                    <%= render "star", recipe_comment: recipe_comment %>
-
-                    <%#管理者　またはレシピにコメントしたのがログインしているユーザーだったら %>
-                    <% if current_admin || recipe_comment.user == current_user %>
-                      <%= link_to "削除", recipe_recipe_comment_path(recipe_comment.recipe, recipe_comment), method: :delete, class: 'btn btn-danger btn-sm' %>
-                    <% end %>
+                    <table class="table table-borderless">
+                      <tr>
+                        <td><%= render "star", recipe_comment: recipe_comment %></td>
+                        <td>
+                        <%#管理者　またはレシピにコメントしたのがログインしているユーザーだったら %>
+                          <% if current_admin || recipe_comment.user == current_user %>
+                            <%= link_to "削除", recipe_recipe_comment_path(recipe_comment.recipe, recipe_comment), method: :delete, class: 'btn btn-danger btn-sm' %>
+                          <% end %>
+                        </td>
+                      </tr>
+                    </table>
                 </div>
               </div>
             <% end %>
           </div>
 
           <div class="form-group">
-            <label class="mt-3">コメントする</label>
+            <label class="mt-3 mb-3">コメントする</label>
 
             <%= form_with model: [@recipe, @recipe_comment] do |f|%>
               <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", :size=>"60x5" %>
