--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-start">
-    <div class="col-9">
+    <div class="col-9 offset-2">
       <h2 class="my-5 col-4">新規会員登録</h2>
       
       <%= form_with model: @user, url: user_registration_path do |f| %>
