--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,5 +1,5 @@
  <div class="row">
-    <div class="col-8 mt-3 mb-4">
+    <div class="col-8 offset-1 mt-3 mb-4">
       <%- if controller_name != 'sessions' %>
         <h4>既に登録済みの方</h4>
         <%= link_to "こちら", new_session_path(resource_name) %>　からログインしてください。
