--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col my-5">
+    <div class="col offset-2 my-5">
       <%= render 'layouts/error', obj: @user %>
       <h2 class="col-4">ユーザー情報編集</h2>
     </div>
   </div>
   
   <div class="row">
-    <div class="col-10">
+    <div class="col-10 offset-2">
       <%= form_with model: @user do |f| %>
       
       <table class="table table-borderless">
