--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,7 +1,7 @@
 <div class="cotainer">
   <div class="row">
-    <div class="col-4 offset-1">
-      <h2 class="my-3"><%= @word %> の検索結果（全<%= @recipes.count%>件）</h2>
+    <div class="col-auto offset-1">
+      <h2 class="mt-5 ml-4 bg-light">"<%= @word %>" の検索結果（全<%= @recipes.count%>件）</h2>
     </div>
   </div>
 </div>
