--- a/app/views/public/tagsearches/search.html.erb
+++ b/app/views/public/tagsearches/search.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-5">
-      <h2 class="mt-5 my-3 bg-light"><%= @word %> の検索結果（全<%= @recipes.count %>件）</h2>
+    <div class="col-auto">
+      <h2 class="mt-5 my-3 bg-light">"<%= @word %>" の検索結果（全<%= @recipes.count %>件）</h2>
     </div>
   </div>
 </div>
 
   <%= render 'public/recipes/list', recipes: @recipes %>
+  
+  <%= render 'layouts/paginate', recipes: @recipes %>
