--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -29,7 +29,7 @@
            
            <tr>
             <td></td>
-            <td><%= f.submit "新規登録" %></td>
+            <td><%= f.submit "新規登録", class: "" %></td>
            </tr>
         </table>
       <% end %>
