--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,10 @@
 @use '~bootstrap/scss/bootstrap';
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .top-bg {
   background-color: rgba(245,245,245,0.55);
   line-height: 60px;
@@ -43,6 +48,7 @@ main {
   width: 100%;
   height: 100%;
   padding: 0px;
+  flex: 1;
 }
 
 .top {
@@ -61,7 +67,7 @@ main {
 footer {
   color: #fff;
   background-color: #2f4f4f;
-  margin-top: auto;
+  width: 100%;
 }
 
 .footer__navi {
@@ -81,4 +87,8 @@ footer {
 }
 
 .footer__logo {
+}
+
+.pagination {
+  justify-content: center;
 }
