--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <%= render 'layouts/flash' %>
-  <div class="row">
-    <div class="col-6 offset-4 mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-auto mt-5">
       <h3>ユーザー一覧</h3>
     </div>
   </div>
   
-  <div class="row">
-    <div class="col-9 offset-1 mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-10 mt-3 mb-3">
       <table class="table text-center">
         <thead>
           <tr>
@@ -39,3 +39,5 @@
     </div>
   </div>
 </div>
+
+<%= paginate @users %>
