--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,4 +17,6 @@
   
   
 <%= render 'public/recipes/list', recipes: @recipes %>
+
+<h4 class="mb-5 text-right"><%= link_to "レシピ一覧へ ＞", recipes_path %></h4>
 </div>
