--- a/app/views/public/recipes/index.html.erb
+++ b/app/views/public/recipes/index.html.erb
@@ -1,15 +1,22 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-between">
+    <%= render 'layouts/flash' %>
     <h2 class="mt-5 bg-light">レシピ一覧（全<%= @recipes.count %>件）</h2>
     
-    <div class="col-5 mt-5">
-    <h3><%= link_to '新しい順', recipes_path(latest: "true") %>
-    | <%= link_to '古い順', recipes_path(old: "true") %>
-    |<%= link_to '評価の高い順', recipes_path(star_count: "true") %></h3>
+    <div class="col-md-auto col-sm-10 mt-5">
+      <h4>
+        <select class="ui fluid dropdown" onChange="location.href=value;">
+          <option value="">並び替え</option>
+          <option value="<%= recipes_path(latest: "true") %>">新着順</option>
+          <option value="<%= recipes_path(old: "true") %>">古い順</option>
+          <option value="<%= recipes_path(star_count: "true") %>">評価の高い順</option>
+          <option value="<%= recipes_path(favorites_count: "true") %>">いいねが多い順</option>
+        </select>
+      </h4>
     </div>
   </div>
 </div>
 
 <%= render 'list', recipes: @recipes %>
 
-<%= render 'layouts/paginate', recipes: @recipes %>
+<%= paginate @recipes %>
