--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center">
       <%= render 'layouts/error', obj: @recipe %>
-    <div class="col-md-5 offset-md-4 pb-3">
+    <div class="col-md-auto pb-3">
       <h1 class="mt-3">新規投稿</h1>
     </div>
   </div>
@@ -51,7 +51,7 @@
           
           <tr>
             <td></td>
-            <td><%= f.submit "投稿" %></td>
+            <td><%= f.submit "投稿", class: "btn btn-success" %></td>
           </tr>
       </table>
       <% end %>
