--- a/app/views/public/tagsearches/search.html.erb
+++ b/app/views/public/tagsearches/search.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-auto">
+    <div class="col-md-auto">
       <h2 class="mt-5 my-3 bg-light">"<%= @word %>" の検索結果（全<%= @recipes.count %>件）</h2>
     </div>
   </div>
@@ -8,4 +8,4 @@
 
   <%= render 'public/recipes/list', recipes: @recipes %>
   
-  <%= render 'layouts/paginate', recipes: @recipes %>
+  <%= paginate @recipes %>
