--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-6">
-      <h3 class="mt-4"><%= @user.name %>さんのお気に入りレシピ</h3>
+    <div class="col-md-auto">
+      <h3 class="mt-4 bg-light"><%= @user.name %>さんのお気に入りレシピ</h3>
     </div>
   </div>
   
   <%= render 'public/recipes/list', recipes: @favorite_recipes %>
 </div>
+
+<%= paginate @recipes %>
