--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2f4f4f;">
     <div class="container">
       <%= link_to root_path do %>
-        <%= image_tag "Logo.jpeg", alt: "LOGO", size: "170x100" %>
+        <%= image_tag "Logo1.jpeg", alt: "LOGO", size: "170x100" %>
       <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
