--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
-  <div class="row">
-    <div class="col-7 offset-2 mt-4">
-      <h3><%= @user.name %> さんの詳細</h3>
+  <%= render 'layouts/flash' %>
+  <div class="row justify-content-center">
+    <div class="col-outo mt-4">
+      <h3 class="bg-light"><%= @user.name %> さんの詳細</h3>
     </div>
   </div>
 
-  <%= render 'layouts/flash' %>
 
-  <div class="row">
-    <div class="col-10 offset-2">
+  <div class="row justify-content-center">
+    <div class="col-md-8 offset-md-3">
       <table class="table table-borderless mt-3">
         <tr>
           <td>ユーザーID</td>
@@ -54,12 +54,12 @@
 
   <div class="row">
     <div class="col-7 offset-2">
-      <h4><%= @user.name %> さんのコメント一覧</h4>
+      <h4 class="mt-3"><%= @user.name %> さんのコメント一覧</h4>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-8 offset-2 mb-3">
+  <div class="row justify-content-center">
+    <div class="col-8 mb-3">
          <div class="media border md-3 mt-3 mb-3">
            <div class="media-body">
              <table class="table table-borderless">
@@ -84,7 +84,7 @@
                    <td><%= recipe_comment.created_at.strftime('%Y/%m/%d') %></td>
                    <td><%= link_to "削除", recipe_recipe_comment_path(recipe_comment.recipe, recipe_comment), method: :delete, class: 'btn btn-danger btn-sm' %></td>
                  </tr>
-               
+
                <% end %>
              </table>
         </div>
