--- a/app/views/public/recipes/_list.html.erb
+++ b/app/views/public/recipes/_list.html.erb
@@ -11,7 +11,7 @@
           
           <div class="card-body">
             <div class="row">
-              <div class="col-12">
+              <div class="col-sm-12 col-md-12">
                 <p class="card-title">
                   <%= link_to recipe_path(recipe.id), class:"text-dark" do %>
                     <strong><i class="far fa-flag"></i><span>　<%= recipe.name %></span></strong>
@@ -26,8 +26,9 @@
                   <%= recipe.user.name %>
                 <% end %>
                 | </span>
-                <span><i class="fa-solid fa-comment"></i><%= recipe.recipe_comments.count %>コメント</span>
-                <span>❤️️️︎<%= recipe.favorites.count %></span>
+                <span> <i class="fa-solid fa-comment"></i><%= recipe.recipe_comments.count %>コメント</span>
+                <span> ❤️️️︎ <%= recipe.favorites.count %></span>
+                <span> <i class="fa-solid fa-eye"></i> <%= recipe.read_counts.count %></span>
                 <span><%= render 'public/recipes/average_star', recipe: recipe %></span>
               </div>
             </div>
