--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row justify-content-start">
-    <div class="col-9 offset-2">
+    <%= render "public/shared/error_messages", resource: resource %>
+    <div class="col-10 offset-2">
       <h2 class="my-5 col-4">新規会員登録</h2>
       
       <%= form_with model: @user, url: user_registration_path do |f| %>
-        <%= render "public/shared/error_messages", resource: resource %>
         
         <table class="table table-borderless">
            <tr>
@@ -29,7 +29,7 @@
            
            <tr>
             <td></td>
-            <td><%= f.submit "新規登録", class: "" %></td>
+            <td><%= f.submit "新規登録", class: "btn btn-info" %></td>
            </tr>
         </table>
       <% end %>
