--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -38,7 +38,7 @@ body {
 }
 
 main {
-  background-image: image-url("back.jpeg");
+  background-image: image-url("/assets/back.jpeg");
   //background-image: url('/assets/back.jpeg');
   //background-image: url('/assets/back.jpeg');
 
