--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -38,9 +38,8 @@ body {
 }
 
 main {
-  background-image: image-url("/assets/back.jpeg");
   //background-image: url('/assets/back.jpeg');
-  //background-image: url('/assets/back.jpeg');
+  background-image: image-url("back.jpeg");
 
   background-size: cover;
   background-position: center;
