--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -29,23 +29,9 @@
               <span><%= @recipe.created_at.strftime('%Y/%m/%d') %> |</span>
               <span><i class="fa-solid fa-comment"></i><%= @recipe.recipe_comments.count %></span>
               <span> <i class="fa-solid fa-eye"></i> <%= @recipe.read_counts.count %></span>
-
-            <%# 管理者とログインしていないユーザーはいいね機能は表示しない %>
-            <% if user_signed_in? %>
-              <% if @recipe.favorited_by?(current_user) %>
-                <span>
-                  <%= link_to recipe_favorite_path(@recipe), method: :delete do %>
-                    ❤️<%= @recipe.favorites.count %> いいね
-                  <% end %>
-                </span>
-              <% else %>
-                <span>
-                  <%= link_to recipe_favorite_path(@recipe), method: :post do %>
-                    ♡<%= @recipe.favorites.count %> いいね
-                  <% end %>
-                </span>
-              <% end %>
-            <% end %>
+              <span id="favorite_btn_<%= @recipe.id %>">
+                <%= render 'public/favorites/btn', recipe: @recipe %>
+              </span>
             
             </div>
           </div>
@@ -96,69 +82,10 @@
           </table>
           <hr>
           
-          <div class="comments card-text">
-            <h4 class="mt-4 mb-4"><%= @recipe.recipe_comments.count %>件コメント</h4>
-
-            <% @recipe.recipe_comments.each do |recipe_comment| %>
-              <div class="media border md-3">
-                <div class="media-body ml-4 p-3">
-                    <%= recipe_comment.user.name %>
-                    ｜<%= recipe_comment.comment %>
-                    <table class="table table-borderless">
-                      <tr>
-                        <td><%= render "star", recipe_comment: recipe_comment %></td>
-                        <td>
-                        <%#管理者　またはレシピにコメントしたのがログインしているユーザーだったら %>
-                          <% if current_admin || recipe_comment.user == current_user %>
-                            <%= link_to "削除", recipe_recipe_comment_path(recipe_comment.recipe, recipe_comment), method: :delete, class: 'btn btn-danger btn-sm' %>
-                          <% end %>
-                        </td>
-                      </tr>
-                    </table>
-                    <%= recipe_comment.created_at.strftime('%Y/%m/%d') %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-
-          <div class="form-group">
-            <label class="mt-3 mb-3">コメントする</label>
-
-            <%= form_with model: [@recipe, @recipe_comment] do |f|%>
-              <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", :size=>"55x5" %>
-
-              <%#評価機能=%>
-              <% if @recipe_comment.id.nil? %>
-                  <div class="form-group" id="star">
-                    <%= f.label :star, "評価" %>
-                    <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
-                    <div id="post_raty"></div>
-                  </div>
-                  <script>
-                    $(document).on('turbolinks:load', function() {
-                      let elem = document.querySelector('#post_raty');
-                      if (elem == null) return;
-
-                      elem.innerHTML = ""
-                      let opt = {
-                        starOn: "<%= asset_path('star-on.png') %>",
-                        starOff: "<%= asset_path('star-off.png') %>",
-                        starHalf: "<%= asset_path('star-half.png') %>",
-                        scoreName: 'recipe_comment[star]',
-                      };
-                      raty(elem, opt);
-                    });
-                  </script>
-                <% else %>
-                  <div class="form-group">
-                    <%= render "star", recipe_comment: @recipe_comment %>
-                  </div>
-                <% end %>
-                <%#評価機能%>
-
-              <%= f.submit "送信する", class:'btn btn-lg btn-info mt-2' %>
-            <% end %>
-          </div>
+          <%= render 'public/recipe_comments/index', recipe: @recipe %>
+          
+          <%= render 'public/recipe_comments/form', recipe: @recipe, recipe_comment: @recipe_comment %>
+      
         </div>
       </div>
     </div>
