--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <%= render 'layouts/flash' %>
   <div class="row justify-content-center">
-    <div class="col-md-auto mt-5">
-      <h3>ユーザー一覧</h3>
+    <div class="col-md-auto mt-4">
+      <h3 class="bg-light">ユーザー一覧</h3>
     </div>
   </div>
   
