--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,11 +34,19 @@
             <% end %>
           </li>
 
+        <% if current_user.guest_user? %>
+          <li>
+            <%= link_to users_guest_sign_out_path, method: :delete,class: 'nav-link text-light' do %>
+              <i class="fas fa-sign-out-alt"></i> ログアウト
+            <% end %>
+          </li>
+        <% else %>
           <li>
             <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> ログアウト
             <% end %>
           </li>
+        <% end %>
 
         <% elsif admin_signed_in? %>
           <li>
