--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -80,11 +80,12 @@
               </tr>
             <% end %>
           </table>
-          <hr>
           
-          <%= render 'public/recipe_comments/index', recipe: @recipe %>
-          
-          <%= render 'public/recipe_comments/form', recipe: @recipe, recipe_comment: @recipe_comment %>
+            <%= render 'public/recipe_comments/index', recipe: @recipe %>
+            
+          <% if user_signed_in?%>
+            <%= render 'public/recipe_comments/form', recipe: @recipe, recipe_comment: @recipe_comment %>
+          <% end %>
       
         </div>
       </div>
