[background-image-プリコンパイル]

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -43,8 +43,8 @@ body {
 }
 
 main {
-  background-image: url('/assets/back.jpeg');
-  //background-image: image-url("back.jpeg");
+  //background-image: url('/assets/back.jpeg');
+  background-image: image-url("back.jpeg");
 
   background-size: cover;
   background-position: center;
