--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -44,7 +44,7 @@ body {
 
 main {
   //background-image: url('/assets/back.jpeg');
-  background-image: image-url("back.jpeg");
+  background-image: image-url("back.jpg");
 
   background-size: cover;
   background-position: center;
