--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -45,7 +45,7 @@ body {
 main {
   //background-image: url('/assets/back.jpeg');
   //background-image: image-url("back.jpg");
-  background-image: url("../images/back.jpg");
+  background-image: url("../images/back.jpeg");
 
   background-size: cover;
   background-position: center;
