--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,6 +1,6 @@
 <%= paginator.render do %>
-  <nav>
-    <ul class="pagination">
+  <nav class="pagination" role="navigation" aria-label="pager">
+    <ul class="pagination flex gap-x-1">
       <%= first_page_tag unless current_page.first? %>
       <%= prev_page_tag unless current_page.first? %>
       <% each_page do |page| %>
