--- a/app/views/public/recipe_comments/_index.html.erb
+++ b/app/views/public/recipe_comments/_index.html.erb
@@ -1,3 +1,6 @@
+<%#<% if recipe.recipe_comments.any? %>
+  <%#<hr>%>
+  
   <div class="comments card-text">
     <h4 class="mt-4 mb-4"><%= recipe.recipe_comments.count %>件コメント</h4>
   
@@ -22,3 +25,4 @@
       </div>
     <% end %>
   </div>
+<%#<% end %>
