--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -52,6 +52,7 @@
     </div>
   </div>
 
+<%#<% if @user.recipe_comments.any? %>
   <div class="row">
     <div class="col-7 offset-2">
       <h4 class="mt-3"><%= @user.name %> さんのコメント一覧</h4>
@@ -68,7 +69,6 @@
                  <th>レシピ名</th>
                  <th>コメント/レビュー</th>
                </tr>
-               
                <% @recipe_comments.each do |recipe_comment| %>
 
                  <tr>
@@ -87,10 +87,11 @@
                  </tr>
 
                <% end %>
-           </table>
-         </div>
-       </div>
+             </table>
+        </div>
+      </div>
     </div>
   </div>
   
+  <%#><% end %>
 </div>
