--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-<%#<% if @user.recipe_comments.any? %>
+<% if @user.recipe_comments.any? %>
   <div class="row">
     <div class="col-7 offset-2">
       <h4 class="mt-3"><%= @user.name %> さんのコメント一覧</h4>
@@ -93,5 +93,5 @@
     </div>
   </div>
   
-  <%#<% end %>
+<% end %>
 </div>
