--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,30 +1,16 @@
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner about-inner">
-    <div class="carousel-item active" data-interval="3000">
-      <%= image_tag 'about3.jpg', size: "1400x700", class:'d-block w-100' %>
-    </div>
-
-    <div class="carousel-item" data-interval="3000">
-      <%= image_tag 'about1.jpg', size: "1400x700", class: 'd-block w-100' %>
-    </div>
-
-    <div class="carousel-item" data-interval="3000">
-      <%= image_tag 'about2.jpg', size: "1400x700", class: 'd-block w-100' %>
-    </div>
-
-    <div class="carousel-caption about-bg">
-      <h1 class="about mt-5">About</h1>
-      <h4 class="about-text mt-3">DeliciousMeatDishは肉料理に特化したレシピ投稿サイトです。</br>
-      昨今菜食主義が増えている中、このサイトでは、</br>お肉料理を中心にレシピを投稿でき、レビューをすることもできます。 </br>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-auto">
+      <h1 class="text-center mt-4">About</h1>
+      
+      <h4 class="about-text text-center pt-3 pb-4">DeliciousMeatDishは肉料理に特化したレシピ投稿サイトです。</br>
+      昨今菜食主義が増えている中、このサイトでは、</br>
+      お肉料理を中心にレシピを投稿でき、レビューをすることもできます。 </br>
       肩身が狭くなってしまった肉好きさんのプラットフォームを作れたらと思いました。</h4>
+      
+      <div class="text-center mb-4">
+        <%= image_tag 'about1.jpg', size: "640x500", class: "w-100" %>
+      </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
