--- a/app/views/public/tagsearches/search.html.erb
+++ b/app/views/public/tagsearches/search.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-auto">
-      <h2 class="mt-5 my-3 bg-light">"<%= @word %>" の検索結果（全<%= @recipes.total_count %>件）</h2>
+      <h2 class="mt-5 my-3 bg-light">タグ "<%= @word %>" のレシピ一覧（全<%= @recipes.total_count %>件）</h2>
     </div>
   </div>
 </div>
