--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -82,7 +82,7 @@
 
           <li>
             <%= link_to users_guest_sign_in_path, method: :post, class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-in-alt"></i> ゲストログイン（間欄用）
+              <i class="fas fa-sign-in-alt"></i> ゲストログイン
             <% end %>
           </li>
 
