--- a/app/views/public/users/confirm.html.erb
+++ b/app/views/public/users/confirm.html.erb
@@ -7,8 +7,8 @@
       
       <table class="table table-borderless">
        <tr>
-         <td><%= link_to "退会しない", user_path(@user.id), class: 'btn btn-primary btn-lg' %></td>
-         <td><%= link_to "退会する", withdraw_users_path, method: :PATCH, "data-confirm" => "本当に退会しますか？", class: 'btn btn-danger btn-lg' %></td>
+         <td><%= link_to "退会しない", user_path(@user.id), class: 'btn btn-primary' %></td>
+         <td><%= link_to "退会する", withdraw_users_path, method: :PATCH, "data-confirm" => "本当に退会しますか？", class: 'btn btn-danger' %></td>
        </tr>
       </table>
     </div>
