--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -37,7 +37,7 @@
           
           <tr>
             <td></td>
-            <td><%= f.submit "変更を保存", class: 'btn btn-success' %></td>
+            <td><%= f.submit "変更を保存", "data-confirm" => "ユーザー情報を更新しますか？", class: 'btn btn-success' %></td>
           </tr>
         </table>
         
